# Proyecto_Final_IPA

./: .gitignore  README.md  pyproject.toml  requirements.txt
Evaluations/: eval_dataset.json  my_queries.json
cli/: create_eval_dataset.py
src/: config.py  main.py  test_system.py  utils.py
src/agents/: main_agent.py  main_graph.py  prompts.py  sql_agent.py  state.py
src/cli/: create_eval_dataset.py  evaluate.py
src/database/: setup_sql.py
src/docs/: LOGICA_AGENTE.md
src/evaluation/: evaluate_rag.py  metrics.py  test_evaluator.py
src/evaluation_core/: evaluator.py  llm_judge.py  metrics.py
src/observability/: langfuse_client.py
src/rag/: ingest_pdf.py
src/tools/: medical_tools.py
