[project]
name = "Proyecto_final_IPA"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain==1.2.10",
    "langchain-classic==1.0.1",
    "langchain-community==0.4.1",
    "langchain-core==1.2.13",
    "langchain-groq==1.1.2",
    "langchain-openai==1.1.10",
    "langchain-text-splitters==1.1.0",
    "langchainhub==0.1.21",
    "langchain-experimental==0.0.15",
    "langfuse-langchain==2.60.10.1",
    "langgraph==1.0.8",
    "langgraph-checkpoint==4.0.0",
    "langgraph-prebuilt==1.0.7",
    "langgraph-sdk==0.3.6",
    "langsmith==0.7.3",
    "rich>=14.3.3",
    "tqdm>=4.67.3",
]
