[project]
name = "Proyecto_final_IPA"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "langchain-core",
    "langchain-groq",
    "langchain-openai",
    "langchain-chroma",
    "langchain-community",
    "langchain-text-splitters",
    "langgraph",
    "langfuse",
    "openai",
    "pydantic",
    "python-dotenv",
    "pypdf",
    "rich",
    "tenacity",
    "tqdm",
    "chromadb>=1.5.1",
]
